--- a/html.html
+++ b/html.html
@@ -8,8 +8,8 @@
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
+            padding: 0; 
+            background-color: #f0f0f0; 
             display: flex;
             justify-content: center;
             align-items: center;
@@ -43,7 +43,7 @@
         }
         .character-name {
             font-weight: bold;
-            color: #ff69b4;
+            color: #ff69b4; 
             cursor: pointer;
             position: relative;
             display: inline-block;
@@ -67,17 +67,17 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container"> 
         <h1>可爱的萝莉</h1>
         <p>ps：测试ing
             <hr>
-            在这里，我们探索一些可爱萝莉角色，她们每一个都有独特的背景和个性。</p>
+            一些可爱萝莉角色。</p>
         <div class="character">
             <div class="character-name">
                 爱丽丝
                 <span class="tooltip">一个充满幻想的魔法少女。</span>
             </div>
-            她是一个精灵族的小女孩，性格活泼开朗。爱丽丝总是能带给周围的人快乐。
+            没错，就是去仙境的那个。
         </div>
         <div class="character">
             <div class="character-name">
