--- a/html.html
+++ b/html.html
@@ -8,8 +8,8 @@
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
-            padding: 0; 
-            background-color: #f0f0f0; 
+            padding: 0;
+            background-color: #f0f0f0;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -43,7 +43,7 @@
         }
         .character-name {
             font-weight: bold;
-            color: #ff69b4; 
+            color: #ff69b4;
             cursor: pointer;
             position: relative;
             display: inline-block;
@@ -67,11 +67,11 @@
     </style>
 </head>
 <body>
-    <div class="container"> 
+    <div class="container">
         <h1>可爱的萝莉</h1>
         <p>ps：测试ing
             <hr>
-            三大阿手打大大大打的asdasd阿萨德阿萨德阿达的一些可爱萝莉角色。</p>
+            一些可爱萝莉角色。</p>
         <div class="character">
             <div class="character-name">
                 爱丽丝
