--- a/html.html
+++ b/html.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>可爱的萝莉</title>
+    <title>岁月史书</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -68,30 +68,30 @@
 </head>
 <body>
     <div class="container">
-        <h1>可爱的萝莉</h1>
+        <h1>跑团那些事儿</h1>
         <p>ps：测试ing
-            <hr>
-            一些可爱萝莉角色。</p>
+            <hr> 
+            亿些黑历史。</p>
         <div class="character">
             <div class="character-name">
-                爱丽丝
-                <span class="tooltip">一个充满幻想的魔法少女。</span>
+                长谷
+                <span class="tooltip">倒霉蛋</span>  
             </div>
-            没错，就是去仙境的那个。
+            没错，团队被书架伤害累计9+hp。
         </div>
         <div class="character">
-            <div class="character-name">
-                小花
-                <span class="tooltip">一个热爱自然的森林女孩。</span>
+            <div class="character-name"> 
+                千里湘漓
+                <span class="tooltip">老眉笔二号</span>
             </div>
-            她总是和动物们在一起，对自然有着深厚的感情。小花常常在森林中漫步，享受自然的美丽。
+            闪避大失败，受d12=12hp，被自己骰娘背刺（。
         </div>
         <div class="character">
-            <div class="character-name">
-                樱
-                <span class="tooltip">一个神秘的忍者少女。</span>
+            <div class="character-name">  
+                loading
+                <span class="tooltip">。</span>
             </div>
-            她在黑夜中行动，拥有惊人的敏捷和智慧。樱的故事充满了冒险和秘密。
+            loading。
         </div>
     </div>
 </body>
