--- a/html.html
+++ b/html.html
@@ -104,7 +104,7 @@
                     千里湘漓
                     <span class="tooltip">老眉笔二号</span>
                 </div>
-                闪避大失败，受d12=12hp，被自己骰娘背刺（。
+                闪避大失败，受d12=12hp，被自己骰娘背刺（
             </div>
             <div class="character">
                 <div class="character-name">
